# NDKtest

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/lake/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  HbAudio.cpp  HbAudio.h  HbAudioChannel.cpp  HbAudioChannel.h  HbFFmpeg.cpp  HbFFmpeg.h  HbFilter.cpp  HbJavaCall.cpp  HbJavaCall.h  HbPlayStatus.cpp  HbPlayStatus.h  HbPlayer.cpp  HbQueue.cpp  HbQueue.h  HbVideo.cpp  HbVideo.h  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/lake/ndktest/: FFmpeg.java  FileListActivity.java  MainActivity.java  PermissionUtils.java  VideoActivity.java  YuvDataListener.java
app/src/main/res/layout/: activity_file_list.xml  activity_main.xml  list_item.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/lake/ndktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
